Upgrade spark to version 4.1.3